<main> overflow fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,7 +21,6 @@ body {
 
 main {
   height: 100%;
-  overflow: auto;
 }
 
 
